# DBapp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.ee70e97  LICENSE  README.md  adminwindow.cpp  adminwindow.h  adminwindow.ui  databasequeries.cpp  databasequeries.h  dbconnectionmanager.cpp  dbconnectionmanager.h  dialogregisterwindow.cpp  dialogregisterwindow.h  dialogregisterwindow.ui  errormessages.cpp  errormessages.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  securityutils.cpp  securityutils.h  settingsconfigeditor.cpp  settingsconfigeditor.h  settingsconfigeditor.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui  userauthorization.cpp  userauthorization.h  userwindow.cpp  userwindow.h  userwindow.ui
config/: dataConnectConfig.ini
